first commit on branchFm

--- a/index.html
+++ b/index.html
@@ -1,117 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="body1">
-      <div class="nav">
-        <ul class="navbar">
-          <img
-            class="logo"
-            src="image/logo.jpg"
-            style="flex-basis: 5%; width: 80px; height: 80px"
-            alt="logo"
-          />
-          <h1 class="logoname" style="flex-basis: 80%">OAKLAKE TECHNOLOGY</h1>
-          <li style="flex-basis: 5%">
-            <a class="loginbut" href="login.php">Login</a>
-          </li>
-          <li class="serbut" style="flex-basis: 10%">
-            <a class="serdrop" href="#">Services</a>
-            <div class="drop">
-              <a href="st.html">Software Training</a>
-              <a href="sd.html">Software Development</a>
-              <a href="pj.html">Projects</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <h6 class="welcome">
-        Welcome, dear visitor.
-        <a class="regbut" href="register.php">Register</a> and enjoy all our
-        resources. At no cost!
-      </h6>
-    </div>
 
-    <div class="body2">
-      <ul class="services-list">
-        <h2 style="font-size:58px;">Services we offer include:</h2>
-        <li>Software training</li>
-        <li>Software development</li>
-        <li>Machine learning</li>
-        <li>Dozens of sample base to choose from</li>
-        <li>Domain registration</li>
-        <li>Networking</li>
-        <li>Web security protocols</li>
-        <li>And so much more</li>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Home</title>
+</head>
+
+<body>
+  <div class="body1">
+    <div class="nav">
+      <ul class="navbar">
+        <img class="logo" src="image/logo.jpg" style="flex-basis: 5%; width: 80px; height: 80px" alt="logo" />
+        <h1 class="logoname" style="flex-basis: 80%"> <span style="font-size: 3em; color: rgb(149, 249, 0);">O</span>CTABYTES INC.</h1>
+        <li style="flex-basis: 5%">
+          <a class="loginbut" href="login.html">Login</a>
+        </li>
+        <li class="serbut" style="flex-basis: 10%">
+          <a class="serdrop" href="#">Services</a>
+          <div class="drop">
+            <a href="st.html">Software Training</a>
+            <a href="sd.html">Software Development</a>
+            <a href="pj.html">Projects</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <h6 class="welcome">
+      Welcome, dear visitor.
+      <a class="regbut" href="register.html">Register</a> and enjoy our
+      resources. At no cost!
+    </h6>
+  </div>
+
+  <div class="body2">
+    <ul class="services-list">
+      <h3 style="font-size:40px;">Services</h3>
+      <li>Software development and Training</li>
+      <li>Machine learning</li>
+      <li>Data Analysis</li>
+      <li>Domain registration</li>
+      <li>Networking</li>
+      <li>Web security protocols</li>
+      <li>Dozens of sample base to choose from</li>
+      <li>And so much more</li>
+    </ul>
+  </div>
+
+  <div class="body3">
+    <div>
+      <h1 style="color:whitesmoke">Join our community</h1>
+    </div>
+    <div>
+      <a class="bdbut dow" href="#">Download our application</a>
+    </div>
+    <div>
+      <a class="bdbut wat" href="#">Watch our tutorial videos</a>
+    </div>
+  </div>
+
+  <div id="footer" class="foot">
+    <address>
+     <br> Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /><br />
+      Get in touch: <br /><br />
+      <a href="mailto:oktabytesInc@gmail.com">Click to Email us!</a> <br /><br />
+     
+      Location<br />
+     
+      600 E CAMPUS DRIVE CARBONDALE IL<br />
+    </address>
+  
+
+    <div>All rights reserved. 2025</div>
+    <div>
+      Our policies: <br /><br />
+      <ul class="proj">
+        <li><a href="about.html">About</a></li>
+        <li><a href="#footer">Privacy</a></li>
+        <li><a href="#footer">Licenses</a></li>
+        <li><a href="#footer">Terms and conditions</a></li>
+        <li><a href="#footer">Investors</a></li>
+      </ul>
+    </div>
+    <div>
+      Our resources: <br /><br />
+      <ul class="proj">
+        <li><a href="#footer">Community</a></li>
+        <li><a href="#footer">Blog</a></li>
+        <li><a href="#footer">Feedback</a></li>
+        <li><a href="#footer">FAQ</a></li>
       </ul>
     </div>
 
-    <div class="body3">
-      <div>
-        <h1>What are you waiting for? Join our community now</h1>
-      </div>
-      <div>
-        <a class="bdbut dow" href="#">Download our application</a>
-      </div>
-      <div>
-        <a class="bdbut wat" href="#">Watch our tutorial videos</a>
-      </div>
+    <div>
+      Our products: <br /><br />
+      <ul class="proj">
+        <li><a href="#footer">Download</a></li>
+        <li><a href="#footer">Marketplace</a></li>
+      </ul>
     </div>
+  </div>
 
-    <div id="footer" class="foot">
-      <address>
-        Founded by Abitogun<br />
-        Get in touch with us: <br />
-        <a href="mailto:oaklake@gmail.com">Email us!</a> <br />
-        Visit us at:<br />
-        <a href="#">www.oaklaketechnology.com</a><br />
-        P.O.Box 123, Awolowo Road, Ibadan<br />
-        Nigeria
-      </address>
-      <div>
-        Our projects includes: <br /><br />
-        <ul class="proj">
-          <li>Coil jamaers</li>
-          <li>Finnicky algorithms</li>
-          <li>Bread butter</li>
-          <li>Goats of the wild</li>
-        </ul>
-      </div>
-      <div>All rights reserved. 2025</div>
-      <div>
-        Our policies: <br /><br />
-        <ul class="proj">
-          <li><a href="about.html">About</a></li>
-          <li><a href="#footer">Privacy</a></li>
-          <li><a href="#footer">Licenses</a></li>
-          <li><a href="#footer">Terms and conditions</a></li>
-          <li><a href="#footer">Investors</a></li>
-        </ul>
-      </div>
-      <div>
-        Our resources: <br /><br />
-        <ul class="proj">
-          <li><a href="#footer">Community</a></li>
-          <li><a href="#footer">Blog</a></li>
-          <li><a href="#footer">Feedback</a></li>
-          <li><a href="#footer">FAQ</a></li>
-        </ul>
-      </div>
+  <script src="script.js"></script>
+</body>
 
-      <div>
-        Our products: <br /><br />
-        <ul class="proj">
-          <li><a href="#footer">Download</a></li>
-          <li><a href="#footer">Marketplace</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <script src="script.js"></script>
-  </body>
 </html>
