--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <style><?php include "style.css" ?></style>
+   
     <title>Sign In</title>
 </head>
 <body class="fb" >
 
  <div class="formbody2">
-    <form class="signinform" method="POST" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>">
+    <form class="signinform" method="POST" >
         <div class="si">
             <label for="em">Email</label>
             <input type="email" name="" id="em">
