--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1 class="logoname" style="flex-basis: 80%">
             <span style="font-size: 3em; color: #73bc07">O</span>AKTABYTES INC.
           </h1>
-          <li style="flex-basis: 5%">
+          <li class="middle" style="flex-basis: 5%">
             <a class="loginbut" href="login.html">Login</a>
           </li>
           <li class="serbut" style="flex-basis: 10%">
@@ -40,9 +40,15 @@
       </h6>
     </div>
 
+    <div class="bodyx">
+      Welcome, dear visitor.
+      <a class="regbutx" href="register.html">Register</a> and enjoy our
+      resources. At no cost!
+    </div>
+
     <div class="body2">
       <ul class="services-list">
-        <h3 style="font-size: 40px">Services</h3>
+        <h3 class="serhead" style="font-size: 40px">Services</h3>
         <li>Software development and Training</li>
         <li>Machine learning</li>
         <li>Data Analysis</li>
