--- a/login.html
+++ b/login.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-   
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+
     <title>Sign In</title>
-</head>
-<body class="fb" >
-
- <div class="formbody2">
-    <form class="signinform" method="POST" >
+  </head>
+  <body class="fb">
+    <div class="formbody2">
+      <form class="signinform" method="POST">
         <div class="si">
-            <label for="em">Email</label>
-            <input type="email" name="" id="em">
+          <label for="em">Email</label>
+          <input type="email" name="" id="em" />
         </div>
         <div class="si">
-            <label for="pwd">Password</label>
-            <input type="password" name="" id="pwd">
+          <label for="pwd">Password</label>
+          <input type="password" name="" id="pwd" />
         </div>
-        <div class="housebut"><button class="signinbutton" type="submit"><b>Sign in</b></button></div>
-
-    </form>
- </div>  
-
-
-
-
-
-
-</body>
+        <div class="housebut">
+          <button class="signinbutton" type="submit"><b>Sign in</b></button>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
