introduced oak seed on the O

--- a/index.html
+++ b/index.html
@@ -1,120 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Home</title>
-  </head>
 
-  <body>
-    <div class="body1">
-      <div class="nav">
-        <ul class="navbar">
-          <img
-            class="logo"
-            src="image/logo.webp"
-            style="flex-basis: 5%; width: 80px; height: 80px"
-            alt="logo"
-          />
-          <h1 class="logoname" style="flex-basis: 80%">
-            <span style="font-size: 3em; color: #73bc07">O</span>AKTABYTES INC.
-          </h1>
-          <li class="middle" style="flex-basis: 5%">
-            <a class="loginbut" href="login.html">Login</a>
-          </li>
-          <li class="serbut" style="flex-basis: 10%">
-            <a class="serdrop" href="#">Services</a>
-            <div class="drop">
-              <a href="st.html">Software Training</a>
-              <a href="sd.html">Software Development</a>
-              <a href="pj.html">Projects</a>
-            </div>
-          </li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="@media.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="slider.css" />
+  <title>Home</title>
+</head>
+
+<body>
+  <div class="body1">
+    <div class="nav">
+
+
+
+      <div class="navbar">
+
+        <div class="logoname">
+          <span style="font-size: 6rem; color: white" class="logosection">O
+            <img src="image/oakseed.png" class="oakseed" style="width: 50px; height: 60px;" alt="oakseedlogo" />
+            <span />
+            <span style="color: whitesmoke; font-size: 2rem;" class="acktabytes">aktabytes</span>
+        </div>
+
+        <div class="navbarulist">
+          <ul>
+            <li class="middle">
+              <a class="loginbut" href="login.html">Login</a>
+            </li>       
+          </ul>
+          <ul>
+            <li class="serbut">
+              <a class="serdrop" href="#">Services</a>
+              <div class="drop">
+                <a href="st.html">Software Training</a>
+                <a href="sd.html">Software Development</a>
+                <a href="pj.html">Projects</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+
       </div>
-      <h6 class="welcome">
-        Welcome, dear visitor.
-        <a class="regbut" href="register.html">Register</a> and enjoy our
-        resources. At no cost!
-      </h6>
-    </div>
 
-    <div class="bodyx">
-      Welcome, dear visitor.
-      <a class="regbutx" href="register.html">Register</a> and enjoy our
+
+
+
+
+    </div>
+    <h6 class="welcome" style="color:white;">
+      Welcome!
+      <a class="regbut" href="register.html">Register</a> and enjoy our
       resources. At no cost!
+    </h6>
+  </div>
+
+
+
+  <div class="body2">
+    <!-- <ul class="services-list">
+      <h3 class="serhead" style="font-size: 40px">Services</h3>
+      <li>Software development and Training</li>
+      <li>Machine learning</li>
+      <li>Data Analysis</li>
+      <li>Domain registration</li>
+      <li>Networking</li>
+      <li>Web security protocols</li>
+      <li>Dozens of sample base to choose from</li>
+      <li>And so much more</li>
+    </ul> -->
+
+
+
+
+
+
+    <div class="gallery">
+      <img src="https://picsum.photos/id/104/400/400" alt="a dream catcher">
+      <img src="https://picsum.photos/id/1082/400/400" alt="a piano">
+      <img src="https://picsum.photos/id/158/400/400" alt="a live concert">
+      <img src="https://picsum.photos/id/234/400/400" alt="Paris">
     </div>
 
-    <div class="body2">
-      <ul class="services-list">
-        <h3 class="serhead" style="font-size: 40px">Services</h3>
-        <li>Software development and Training</li>
-        <li>Machine learning</li>
-        <li>Data Analysis</li>
-        <li>Domain registration</li>
-        <li>Networking</li>
-        <li>Web security protocols</li>
-        <li>Dozens of sample base to choose from</li>
-        <li>And so much more</li>
+
+
+
+
+  </div>
+
+  <div class="body3">
+    <div>
+      <h1 style="color: whitesmoke">Join our community</h1>
+    </div>
+    <div>
+      <a class="bdbut dow" href="#">Download our application</a>
+    </div>
+    <div>
+      <a class="bdbut wat" href="#">Watch our tutorial videos</a>
+    </div>
+  </div>
+
+  <div id="footer" class="foot">
+    <address>
+      <br />
+      Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /><br />
+      Get in touch: <br /><br />
+      <a href="mailto:oktabytesInc@gmail.com">Click to Email us!</a>
+      <br /><br />
+
+      Location<br />
+
+      600 E CAMPUS DRIVE CARBONDALE IL<br />
+    </address>
+
+    <div>All rights reserved. 2025</div>
+    <div>
+      Our policies: <br /><br />
+      <ul class="proj">
+        <li><a href="about.html">About</a></li>
+        <li><a href="#footer">Privacy</a></li>
+        <li><a href="#footer">Licenses</a></li>
+        <li><a href="#footer">Terms and conditions</a></li>
+        <li><a href="#footer">Investors</a></li>
+      </ul>
+    </div>
+    <div>
+      Our resources: <br /><br />
+      <ul class="proj">
+        <li><a href="#footer">Community</a></li>
+        <li><a href="#footer">Blog</a></li>
+        <li><a href="#footer">Feedback</a></li>
+        <li><a href="#footer">FAQ</a></li>
       </ul>
     </div>
 
-    <div class="body3">
-      <div>
-        <h1 style="color: whitesmoke">Join our community</h1>
-      </div>
-      <div>
-        <a class="bdbut dow" href="#">Download our application</a>
-      </div>
-      <div>
-        <a class="bdbut wat" href="#">Watch our tutorial videos</a>
-      </div>
+    <div>
+      Our products: <br /><br />
+      <ul class="proj">
+        <li><a href="#footer">Download</a></li>
+        <li><a href="#footer">Marketplace</a></li>
+      </ul>
     </div>
+  </div>
 
-    <div id="footer" class="foot">
-      <address>
-        <br />
-        Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /><br />
-        Get in touch: <br /><br />
-        <a href="mailto:oktabytesInc@gmail.com">Click to Email us!</a>
-        <br /><br />
+  <script src="script.js"></script>
+</body>
 
-        Location<br />
-
-        600 E CAMPUS DRIVE CARBONDALE IL<br />
-      </address>
-
-      <div>All rights reserved. 2025</div>
-      <div>
-        Our policies: <br /><br />
-        <ul class="proj">
-          <li><a href="about.html">About</a></li>
-          <li><a href="#footer">Privacy</a></li>
-          <li><a href="#footer">Licenses</a></li>
-          <li><a href="#footer">Terms and conditions</a></li>
-          <li><a href="#footer">Investors</a></li>
-        </ul>
-      </div>
-      <div>
-        Our resources: <br /><br />
-        <ul class="proj">
-          <li><a href="#footer">Community</a></li>
-          <li><a href="#footer">Blog</a></li>
-          <li><a href="#footer">Feedback</a></li>
-          <li><a href="#footer">FAQ</a></li>
-        </ul>
-      </div>
-
-      <div>
-        Our products: <br /><br />
-        <ul class="proj">
-          <li><a href="#footer">Download</a></li>
-          <li><a href="#footer">Marketplace</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <script src="script.js"></script>
-  </body>
 </html>
