--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
 
     <div class="gallery">
-      <img src="https://picsum.photos/id/104/400/400" alt="a dream catcher">
-      <img src="https://picsum.photos/id/1082/400/400" alt="a piano">
-      <img src="https://picsum.photos/id/158/400/400" alt="a live concert">
-      <img src="https://picsum.photos/id/234/400/400" alt="Paris">
+      <img src="image/slider1.webp" alt="a dream catcher">
+      <img src="image/slider2.webp" alt="a piano">
+      <img src="image/slider3.webp" alt="a live concert">
+      <img src="image/slider4.webp" alt="Paris">
     </div>
 
 
