Added the slider images,a back button to login & register page and some contrast adjustment

--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <title>Sign In</title>
   </head>
   <body class="fb">
+    <div class="return"><a title="Go back to Homepage." class="ret" href="index.html"><<<</a></div>
     <div class="formbody2">
       <form class="signinform" method="POST">
         <div class="si">
