--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
   </head>
 
   <body class="upbody">
+    <div class="return"><a title="Go back to Homepage." class="ret" href="index.html"><<<</a></div>
     <div class="formbody">
       <form class="signupform" method="POST">
         <h1 style="text-align: center; margin-bottom: 60px; color: white">
