repositioned the oakseed log to the end of OAKTABZTE

--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
       <div class="navbar">
 
         <div class="logoname">
-          <span style="font-size: 6rem; color: white" class="logosection">O
-            <img src="image/oakseed.png" class="oakseed" style="width: 50px; height: 60px;" alt="oakseedlogo" />
-            <span />
-            <span style="color: whitesmoke; font-size: 2rem;" class="acktabytes">aktabytes</span>
+          <span style="font-size: 4rem; color: white" class="logosection">O<span /><span
+              style="color: whitesmoke; font-size: 2rem;" class="acktabytes">aktabytes</span>
+            <img src="image/oakseed2.png" class="oakseed" style="width: 50px; height: 60px;" alt="oakseedlogo" />
         </div>
 
         <div class="navbarulist">
           <ul>
             <li class="middle">
               <a class="loginbut" href="login.html">Login</a>
-            </li>       
+            </li>
           </ul>
           <ul>
             <li class="serbut">
@@ -38,6 +37,15 @@
                 <a href="st.html">Software Training</a>
                 <a href="sd.html">Software Development</a>
                 <a href="pj.html">Projects</a>
+
+                <a href="">Machine learning</a>
+                <a href="">Data Analysis</a>
+                <a href="">Domain registration</a>
+                <a href="">Networking</a>
+                <a href="">Web security protocols</a>
+
+
+
               </div>
             </li>
           </ul>
@@ -61,34 +69,18 @@
 
 
   <div class="body2">
-    <!-- <ul class="services-list">
-      <h3 class="serhead" style="font-size: 40px">Services</h3>
-      <li>Software development and Training</li>
-      <li>Machine learning</li>
-      <li>Data Analysis</li>
-      <li>Domain registration</li>
-      <li>Networking</li>
-      <li>Web security protocols</li>
-      <li>Dozens of sample base to choose from</li>
-      <li>And so much more</li>
-    </ul> -->
-
-
-
-
-
 
     <div class="gallery">
-      <img src="image/slider1.webp" alt="a dream catcher">
-      <img src="image/slider2.webp" alt="a piano">
-      <img src="image/slider3.webp" alt="a live concert">
-      <img src="image/slider4.webp" alt="Paris">
-      <img src="image/slider5.webp" alt="a dream catcher">
+
       <img src="image/slider6.webp" alt="a piano">
       <img src="image/slider7.webp" alt="a live concert">
+      <img src="image/slider1.webp" alt="a dream catcher">
+      <img src="image/slider2.webp" alt="piano">
+      <img src="image/slider4.webp" alt="Paris">
+      <img src="image/slider5.webp" alt="a catcher">
 
     </div>
- 
+
 
 
 
@@ -108,19 +100,8 @@
   </div>
 
   <div id="footer" class="foot">
-    <address>
-      <br />
-      Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /><br />
-      Get in touch: <br /><br />
-      <a href="mailto:oktabytesInc@gmail.com">Click to Email us!</a>
-      <br /><br />
 
-      Location<br />
 
-      600 E CAMPUS DRIVE CARBONDALE IL<br />
-    </address>
-
-    <div>All rights reserved. 2025</div>
     <div>
       Our policies: <br /><br />
       <ul class="proj">
@@ -148,6 +129,9 @@
         <li><a href="#footer">Marketplace</a></li>
       </ul>
     </div>
+
+    <div>All rights reserved. 2025</div>
+
   </div>
 
   <script src="script.js"></script>
