responsiveness of login/register pages,company name// highlighted,slider images tweak,work in progress to some pages,back to home page refined,some styling refined,few accesibility elements added

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 <a href="sd.html">Software Development</a>
                 <a href="pj.html">Projects</a>
 
-                <a href="">Machine learning</a>
-                <a href="">Data Analysis</a>
-                <a href="">Domain registration</a>
-                <a href="">Networking</a>
-                <a href="">Web security protocols</a>
+                <a href="services/machine.html">Machine learning</a>
+                <a href="services/data.html">Data Analysis</a>
+                <a href="services/domain.html">Domain registration</a>
+                <a href="services/network.html">Networking</a>
+                <a href="services/security.html">Web security protocols</a>
 
 
 
@@ -72,12 +72,13 @@
 
     <div class="gallery">
 
-      <img src="image/slider6.webp" alt="a piano">
-      <img src="image/slider7.webp" alt="a live concert">
-      <img src="image/slider1.webp" alt="a dream catcher">
-      <img src="image/slider2.webp" alt="piano">
-      <img src="image/slider4.webp" alt="Paris">
-      <img src="image/slider5.webp" alt="a catcher">
+      <img id="domain" src="image/slider6.webp" alt="Domain Registration">
+      <img id="ml" src="image/slider7.webp" alt="Machine Learning">
+      <img id="network" src="image/slider1.webp" alt="Networking"></a>
+      <img id="data" src="image/slider2.webp" alt="Data Analysis"></a>
+      <img id="security" src="image/slider3.webp" alt="Web Security"></a>
+      <img id="web" src="image/slider4.webp" alt="Web Development"></a>
+      <img id="gamedev" src="image/slider5.webp" alt="Game Development"></a>
 
     </div>
 
