--- a/register.html
+++ b/register.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="@media.css" />
 
     <title>Sign Up</title>
   </head>
 
   <body class="upbody">
-    <div class="return"><a title="Go back to Homepage." class="ret" href="index.html"><<<</a></div>
+    <div class="return">
+      <a title="Go back to Homepage." class="ret" href="index.html">🏚️</a>
+    </div>
+    <div class="inup reg">
+      Do you have an account already?
+      <a class="linkinup" href="login.html">Login here</a>
+    </div>
     <div class="formbody">
       <form class="signupform" method="POST">
         <h1 style="text-align: center; margin-bottom: 60px; color: white">
