added template for bouncing effect,but functionalitz not zet integrated

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
     <address style="color: black;">
       <br />
-      Co-Founded by Femi Abitogun and Ebenezer Olusegun<br />
+      <!-- Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /> -->
       Get in touch: 
       <a href="mailto:oktabytesInc@gmail.com" style="color: crimson;">Click to Email us!</a>
       <br />
