--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="services/data.html">Data Analysis</a>
                 <a href="services/domain.html">Domain registration</a>
                 <a href="services/network.html">Networking</a>
-                <a href="services/security.html">Web security protocols</a>
+
 
 
 
@@ -55,15 +55,24 @@
       </div>
 
 
+    </div>
 
 
+    <div class="welcomemessage">
+
+      <div class="welcome" style="color:white;">
+
+        <b><span style="font-size: 2em;">W</span>elcome to Oaktabytes</b>
+
+        <h5>
+          Explore our community and wealth of
+          resources. At no cost!
+        </h5>
+
+      </div>
 
     </div>
-    <h6 class="welcome" style="color:white;">
-      Welcome!
-      <a class="regbut" href="register.html">Register</a> and enjoy our
-      resources. At no cost!
-    </h6>
+
   </div>
 
 
@@ -76,6 +85,8 @@
       <img id="ml" src="image/slider7.webp" alt="Machine Learning">
       <img id="network" src="image/slider1.webp" alt="Networking"></a>
       <img id="data" src="image/slider2.webp" alt="Data Analysis"></a>
+
+      <!-- replace websecurity with Development and training graphic,name it accordinglz -->
       <img id="security" src="image/slider3.webp" alt="Web Security"></a>
       <img id="web" src="image/slider4.webp" alt="Web Development"></a>
       <img id="gamedev" src="image/slider5.webp" alt="Game Development"></a>
@@ -91,7 +102,14 @@
   <div class="body3">
     <div>
       <h1 style="color: whitesmoke">Join our community</h1>
+
+
     </div>
+
+    <div>
+      <a class="regbut" href="register.html">Register</a>
+    </div>
+
     <div>
       <a class="bdbut dow" href="#">Download our application</a>
     </div>
