--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
           <input required type="password" name="" id="pwd" />
         </div>
         <div class="housebut">
-          <button class="signinbutton" type="submit"><b>Sign in</b></button>
+          <button class="signinbutton" type="submit"><b style="color:aliceblue">Sign in</b></button>
         </div>
         <div class="inup">
           You don't have an account?
