integrated bounicing effect and arranged css files into folder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="@media.css" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="slider.css" />
+  <link rel="stylesheet" href="css/@media.css" />
+  <link rel="stylesheet" href="css/slider.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <title>Home</title>
 </head>
 
@@ -53,107 +53,105 @@
 
 
       </div>
-
-
     </div>
 
 
     <div class="welcomemessage">
-
       <div class="welcome" style="color:white;">
-
-        <b><span style="font-size: 2em;">W</span>elcome to Oaktabytes</b>
-
-        <h5>
-          Explore our community and wealth of
-          resources. At no cost!
-        </h5>
+        <div class="profile">
+          <div class="profile_inner" style="display:none ;">
+            <h4 id="hi"><b><span style="color: whitesmoke; font-size: 3em;">W</span>elcome to Oaktabytes!</b></h4>
+            <h4 id="femi">Explore our community and wealth of
+              resources</h4>
+          </div>
+        </div>
 
       </div>
 
     </div>
 
-  </div>
+
+
+    <div class="body2">
+
+      <div class="gallery">
+
+        <img id="domain" src="image/slider6.webp" alt="Domain Registration">
+        <img id="ml" src="image/slider7.webp" alt="Machine Learning">
+        <img id="network" src="image/slider1.webp" alt="Networking"></a>
+        <img id="data" src="image/slider2.webp" alt="Data Analysis"></a>
+
+        <!-- replace websecurity with Development and training graphic,name it accordinglz -->
+        <img id="security" src="image/slider3.webp" alt="Web Security"></a>
+        <img id="web" src="image/slider4.webp" alt="Web Development"></a>
+        <img id="gamedev" src="image/slider5.webp" alt="Game Development"></a>
+
+      </div>
 
 
 
-  <div class="body2">
-
-    <div class="gallery">
-
-      <img id="domain" src="image/slider6.webp" alt="Domain Registration">
-      <img id="ml" src="image/slider7.webp" alt="Machine Learning">
-      <img id="network" src="image/slider1.webp" alt="Networking"></a>
-      <img id="data" src="image/slider2.webp" alt="Data Analysis"></a>
-
-      <!-- replace websecurity with Development and training graphic,name it accordinglz -->
-      <img id="security" src="image/slider3.webp" alt="Web Security"></a>
-      <img id="web" src="image/slider4.webp" alt="Web Development"></a>
-      <img id="gamedev" src="image/slider5.webp" alt="Game Development"></a>
-
-    </div>
-
-
-
-
-
-  </div>
-
-  <div class="body3">
-    <div>
-      <h1 style="color: whitesmoke">Join our community</h1>
 
 
     </div>
 
-    <div>
-      <a class="regbut" href="register.html">Register</a>
+    <div class="body3">
+      <div>
+        <h1 style="color: whitesmoke">Join our community</h1>
+
+
+      </div>
+
+      <div>
+        <a class="regbut" href="register.html">Register</a>
+      </div>
+
+      <div>
+        <a class="bdbut dow" href="#">Download our application</a>
+      </div>
+      <div>
+        <a class="bdbut wat" href="#">Watch our tutorial videos</a>
+      </div>
     </div>
 
-    <div>
-      <a class="bdbut dow" href="#">Download our application</a>
-    </div>
-    <div>
-      <a class="bdbut wat" href="#">Watch our tutorial videos</a>
-    </div>
-  </div>
-
-  <div id="footer" class="foot">
+    <div id="footer" class="foot">
 
 
-    <div>
-      Our policies: <br /><br />
-      <ul class="proj">
-        <li><a href="about.html">About</a></li>
-        <li><a href="#footer">Privacy</a></li>
-        <li><a href="#footer">Licenses</a></li>
-        <li><a href="#footer">Terms and conditions</a></li>
-        <li><a href="#footer">Investors</a></li>
-      </ul>
-    </div>
-    <div>
-      Our resources: <br /><br />
-      <ul class="proj">
-        <li><a href="#footer">Community</a></li>
-        <li><a href="#footer">Blog</a></li>
-        <li><a href="#footer">Feedback</a></li>
-        <li><a href="#footer">FAQ</a></li>
-      </ul>
-    </div>
+      <div>
+        Our policies: <br /><br />
+        <ul class="proj">
+          <li><a href="about.html">About</a></li>
+          <li><a href="#footer">Privacy</a></li>
+          <li><a href="#footer">Licenses</a></li>
+          <li><a href="#footer">Terms and conditions</a></li>
+          <li><a href="#footer">Investors</a></li>
+        </ul>
+      </div>
+      <div>
+        Our resources: <br /><br />
+        <ul class="proj">
+          <li><a href="#footer">Community</a></li>
+          <li><a href="#footer">Blog</a></li>
+          <li><a href="#footer">Feedback</a></li>
+          <li><a href="#footer">FAQ</a></li>
+        </ul>
+      </div>
 
-    <div>
-      Our products: <br /><br />
-      <ul class="proj">
-        <li><a href="#footer">Download</a></li>
-        <li><a href="#footer">Marketplace</a></li>
-      </ul>
+      <div>
+        Our products: <br /><br />
+        <ul class="proj">
+          <li><a href="#footer">Download</a></li>
+          <li><a href="#footer">Marketplace</a></li>
+        </ul>
+      </div>
+
+      <div>All rights reserved. 2025</div>
+
     </div>
 
-    <div>All rights reserved. 2025</div>
-
-  </div>
-
-  <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
