--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
         <img id="ml" src="image/slider7.webp" alt="Machine Learning">
         <img id="network" src="image/slider1.webp" alt="Networking"></a>
         <img id="data" src="image/slider2.webp" alt="Data Analysis"></a>
-
-        <!-- replace websecurity with Development and training graphic,name it accordinglz -->
-        <img id="security" src="image/slider3.webp" alt="Web Security"></a>
+        <img id="security" src="image/slider3.webp" alt="Web Development Training"></a>
         <img id="web" src="image/slider4.webp" alt="Web Development"></a>
         <img id="gamedev" src="image/slider5.webp" alt="Game Development"></a>
 
