--- a/about.html
+++ b/about.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/@media.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body class="about-body">
+    <div class="return ab">
+      <a title="Go back to the Homepage." class="ret" href="index.html">🏚️</a>
+    </div>
+    <div class="about-container">
+      <h1>ABOUT US</h1>
+      <p>
+        We are a passionate team of innovators and problem-solvers dedicated to
+        delivering the best scalable solutions. Our mission is to bring value
+        and quality to every project we work on, ensuring client satisfaction
+        and driving positive impact.
+      </p>
+      <p>
+        Our expertise ranges from web development, design and training to
+        educational content and innovation.
+      </p>
+      <p>
+        Join us on this exciting journey as we continue to create meaningful
+        solutions that makes a difference in the world!
+      </p>
 
-<body class="about-body">
-  <div class="about-container">
-    <h1>ABOUT US</h1>
-    <p>
-      We are a passionate team of innovators and problem-solvers dedicated to
-      delivering the best scalable solutions. Our mission is to bring value
-      and quality to every project we work on, ensuring client satisfaction
-      and driving positive impact.
-    </p>
-    <p>
-      Our expertise ranges from web development, design and training to
-      educational content and innovation.
-    </p>
-    <p>
-      Join us on this exciting journey as we continue to create meaningful
-      solutions that makes a difference in the world!
-    </p>
+      <address style="color: black">
+        <br />
+        <!-- Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /> -->
+        Get in touch:
+        <a href="mailto:oktabytesInc@gmail.com" style="color: crimson"
+          >Click to Email us!</a
+        >
+        <br />
 
-    <address style="color: black;">
-      <br />
-      <!-- Co-Founded by Femi Abitogun and Ebenezer Olusegun<br /> -->
-      Get in touch: 
-      <a href="mailto:oktabytesInc@gmail.com" style="color: crimson;">Click to Email us!</a>
-      <br />
+        <br />
 
-      <br />
-
-      <!-- 600 E CAMPUS DRIVE CARBONDALE IL<br /> -->
-    </address>
-
-  </div>
-
-
-</body>
-
+        <!-- 600 E CAMPUS DRIVE CARBONDALE IL<br /> -->
+      </address>
+    </div>
+  </body>
 </html>
