background/prototype-logo at the footer/overall design/toggle theme/reponsive background/tata

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <div class="navbar">
 
         <div class="logoname">
-          <span style="font-size: 4rem; color: white" class="logosection">O<span /><span
+          
+         <span style="font-size: 4rem; color: white" class="logosection">O<span /><span
               style="color: whitesmoke; font-size: 2rem;" class="acktabytes">aktabytes</span>
             <img src="image/oakseed2.png" class="oakseed" style="width: 50px; height: 60px;" alt="oakseedlogo" />
         </div>
@@ -142,7 +143,10 @@
         </ul>
       </div>
 
-      <div>All rights reserved. 2025</div>
+      <div class="blogot"> <div>All rights reserved. 2025</div>
+        <img class="logot" src="/image/minlogo.png" alt="minilogo">
+        <button id="dkmodebutton">Switch to darkmode</button>
+      </div>
 
     </div>
 
