welcome font and mini-logo text color

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="welcome" style="color:white;">
         <div class="profile">
           <div class="profile_inner" style="display:none ;">
-            <h4 id="hi"><b><span style="color: whitesmoke; font-size: 3em;">W</span>elcome to Oaktabytes!</b></h4>
+            <h4 id="hi"><b><span style="font-size: 3em;">W</span>elcome to Oaktabytes!</b></h4>
             <h4 id="femi">Explore our community and wealth of
               resources</h4>
           </div>
@@ -145,7 +145,7 @@
 
       <div class="blogot"> <div>All rights reserved. 2025</div>
     
-        <img  id="gamed" class="" src="image/minlogo.png" alt="minilogo"/>
+        <img  id="gamed" class="" src="image/minlogow.png" alt="minilogo"/>
         
         <!-- <img id="gamed1"  class="logot"  src="image/minlogo.png" alt="minilogo"> -->
 
